...
                                    Text("\(item.givenName)")
                                }
                            }
                    } label: {
                        burgerItem()
                    }
                    .accessibilityIdentifier("BurgerMenuButton")
                    .onTapGesture {
                            photosVm.checkContactPermission()
                            showAlert = photosVm.showAlert
                    }
                    searchBarIcons()
                }
...

    @ViewBuilder
    func searchBarIcons() -> some View {
        TextField("Search", text: $textInput)
            .font(.custom("Poppins-Medium", size: 15))
            .padding(.leading, 15)
            .accessibilityIdentifier("TextFieldSearchBar")
        Image(systemName: "line.diagonal")
            .renderingMode(.template)
            .font(.system(size: 30, weight: .thin))
            .rotationEffect(Angle(degrees: -45))
            .padding(.trailing, -5)
        Image(systemName: "magnifyingglass")
...
