...
                        TextCustomPhotoApp(text: "UNDERSTAND",
                                           fontName: "Poppins-Medium",
                                           fontSize: 12,
                                           fontColor: .white,
                                           alignment: .center,
                                           lineLimit: 1)
                        .accessibilityIdentifier("understandButon")
                        .frame(maxWidth: .infinity, maxHeight: 47)
                        .background {
                           Color.blue.cornerRadius(10)
                        }
                        .padding(.top, 15)
                        .onTapGesture {
...
