...
                                id: \.hashValue) { item in
                            NavigationLink {
                                DetailedImageView(imageInfo: item)
                            } label: {
                                CustomImage(imageInfo: item)
                            }
                            .accessibilityIdentifier("CardView")
                            .onAppear {
                                if item.hashValue == photosVm.dataArray.last?.hashValue {
                                    photosVm.fetchDataInfinity(perPage: 40, newSearch: true)
                                }
                            }
                            .simultaneousGesture(
...
